# codex-autorunner

./: .deadcode-baseline.json  .gitignore  .htmlvalidate.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-V1.md  DESIGN-V2.md  DESIGN.md  ISSUE_208_RESOLVED.md  Makefile  OPINIONS.md  PROGRESS.md  README.md  SECURITY.md  TODO.md  car  codex-autorunner.override.yml  codex-autorunner.yml  eslint.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.codex-autorunner/: OPINIONS.md  PROGRESS.md  SPEC.md  TODO.md  config.yml
.githooks/: pre-push
docs/: AGENT_SETUP_GUIDE.md  adding-an-agent.md  car-ticket-skill.md  plugin-api.md  pma-file-transfer-e2e-runbook.md  terminal-debugging.md
schemas/: hub.json
scripts/: add-static-banner.js  add_static_banner.mjs  car-artifact-sizes.sh  check.sh  check_command_resolution.py  check_core_imports.py  check_docs.py  check_dom_structure.mjs  check_import_boundaries.py  check_injected_context.py  check_legacy_pipeline.py  check_protocol_drift.py  deadcode.py  import_boundaries_allowlist.json  install-local-mac-hub.sh  launchd-hub.sh  migrate-workspace-to-contextspace.sh  protocol_utils.py  refresh-local-mac-hub.sh  safe-refresh-local-mac-hub.sh  scaffold_agent.py  update_vendor_codex_schema.py  update_vendor_opencode_openapi.py  validate_interfaces.py
tests/: conftest.py  test_about_car_terminal_context.py  test_agent_policy.py  test_agent_run_events.py  test_agents_registry.py  test_api_contract.py  test_app_server_client.py  test_app_server_events.py  test_app_server_prompts.py  test_app_server_thread_registry.py  test_chatops.py  (+96 more)
(+436 files in other folders)
