[project]
name = "codex-autorunner"
version = "0.1.0"
description = "Codex autorunner CLI per DESIGN-V1"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Codex"}]
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9",
  "click<8.2",
  "pyyaml>=6.0",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "ptyprocess>=0.7",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "pytest>=7.0",
  "httpx>=0.27",
]

[project.scripts]
codex-autorunner = "codex_autorunner.cli:app"
car = "codex_autorunner.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_autorunner = ["static/*", "static/**/*"]

[tool.typer]
completions = true
